rewriting the assignments