@@ -6,8 +6,8 @@ Welcome by the workshop where you are going to build a web scraper that is going
 - Structured task scope
 - Scoped values
 
-The workshop start with just a simple single threaded web scraper that only scrapes a single page. You are to improve 
-this web scraper by first making it multithreaded followed by using virtual threads. These new kind of threads are a great 
+The workshop start with just a simple single threaded web scraper that only scrapes a single page. You are to improve
+this web scraper by first making it multithreaded followed by using virtual threads. These new kind of threads are a great
 new addition to the Java languages but don't work the same as the old threads in every situation. During this workshop you
 are going to experience when virtual threads work best, and when they work just oke.
 
@@ -15,7 +15,7 @@ To follow along with the workshop you need to also check out [this repository](h
 The repo contains a Spring application that is going to act as the server where the scraper is going to be talking to.
 
 ## How to follow along with the workshop
-Below you will find the steps of the workshop. The best way to following along is to start with step 1 and building 
+Below you will find the steps of the workshop. The best way to following along is to start with step 1 and building
 inside this branch. If you want to start every step of the workshop with a clean branch you can also check out the branch belonging to
 that step. Each step has a branch inside this git repo with the same name. If you are falling behind please say so, then we
 can adjust the speed of the workshop :-) or you can also check at the branch of the next step.
@@ -29,7 +29,7 @@ can adjust the speed of the workshop :-) or you can also check at the branch of 
 
 # The steps of the workshop:
 Just follow along with the following steps. If you have any questions feel free to ask Ron and I are there to answer them.
-We will you give some needed information between steps, so you can focus on solving one problem at a time. :-)  
+We will you give some needed information between steps, so you can focus on solving one problem at a time. :-)
 
 ## (Step 1) - check out the code
 You need to check out these two repositories:
@@ -47,14 +47,18 @@ To check if everything works you can try and run the WebScraper class; It should
 If you didn't do it already check out the following branch "add platform threads" this is the basis of the web scraper.
 you can already run it, and it will scrape a single page from the web server.
 
-The first step is to make the **Scrape** run in concurrently using platform threads. The goal is to be able to create any number of 
+The first step is to make the **Scrape** run in concurrently using platform threads. The goal is to be able to create any number of
 Scrape instances that each can scrape a single page.
 
 ## (Step 3) - Start using virtual threads
-Now you can scrape webpages using multiple Scrape instances that each run on a Platform thread. The next step is to implement
-the same thing, but now it should use Virtual Threads instead.
+You can now scrape webpages using multiple Scrape instances that each run on a Platform thread. The next step is to implement
+the same thing, but with use Virtual Threads instead.
 
-**Hint**: Make it easy to switch between Virtual and Platform threads, so you can switch between the two to see the difference in performance.
+<details>
+<summary>Note</summary>
+Make it easy to switch between Virtual and Platform threads, so you can switch between the two to see the difference in performance.
+Doesn't need to any be fancy commenting out a line of code is fine.
+</details>
 
 # REMOVE
 - show that it doesn't make a difference in performance (you need to measure it, to improve it)
@@ -71,15 +75,19 @@ The URLs you can use are:
 - http://localhost:8080/v1/crawl/delay/330/57
 - http://localhost:8080/v1/crawl/330/57
 
-The first end point has a delay between 10 and 200 milliseconds, forcing the threads to block and wait for a number of seconds. 
-The other URL without the delay returns immediately without waiting, using this URL the thread doesn't have to wait that long.
+The first end point has a delay between 10 and 200 milliseconds, forcing the threads to block and wait for a number of milliseconds.
+The other URL without the delay returns immediately without waiting; with this URL the thread doesn't have to wait a long time to get a response.
 
-The second thing you can change is the number of the scrape jobs you start. Try out what differance it makes when you submit 
-200 or 400 scrape task to a pool of platform threads or create as many virtual threads you have jobs.
+The second thing you can change is the number of the scrape jobs you start. Try out what differance it makes when you submit
+200 or 400 or even a 1000 scrape task to a pool of platform threads or create as many virtual threads as you have jobs.
 
 The results may surprise you :-)
 
-**Hint**: Try out lots of task with the delay endpoint.
+<details>
+<summary>Note</summary>
+Try out lots of task with the delay endpoint.
+</details>
+
 
 # REMOVE
 - Let them use a webserver that returns without delay
@@ -87,22 +95,27 @@ The results may surprise you :-)
 - Switch to "normal" behaving end-points  that check the performance improvement
 
 ## (Step 5) - find the pinned virtual thread
-Virtual are unmounted are when they are blocked and waiting for a result to come return. This doesn't always happen though...
+Virtual threads are unmounted when they are blocked like for example, when they are waiting on the response of a web server. Unmouting a nice feature but doesn't (yet) always work...
+When the unmouting doesn't happen we say that the virtual is pinnend. The result is that the Virtual thread and Carrier thread its running on are blocked.
+
 It's up to you to fix the scraper and replace the functionality that causes virtual threads to be pinned.
 
-To help you find the method causing issues you can use the following VM options:
+To help you find the method causing issues you can use one the following VM options:
 ```text
 -Djdk.tracePinnedThreads=short
 
 -Djdk.tracePinnedThreads=full
 ```
-Run the web scraper with one of these two options and replace the functionality with one that does not cause the virtual threads
-to be pinned.
+Run the web scraper with one of these two options and replace the functionality with one that does not cause the virtual thrads
+to be pinned. Try them both out and see what the difference is between the both of them and which one helps you the most to fix the issue.
 
-**Hint**: Java 9 added a http client that does not block
+<details>
+<summary>Hint</summary>
+Java 9 added a http client that does not block
+</details>
 
 ## (Step 6) - Set carrier threads (Improve performance branch)
-By default, you get as many carrier thread as there are cores available inside you system. There are two ways to tweak the 
+By default, you get as many carrier thread as there are cores available inside you system. There are two ways to tweak the
 number of carrier threads that get created. 
 
 Use the following options and see what impact it has on your scraper.
@@ -112,61 +125,55 @@ jdk.virtualThreadScheduler.parallelism=5
 jdk.virtualThreadScheduler.maxPoolSize=10
 ```
 
-You can remove these options when you continue to the next step.
+Try out some diffenent numbers and see if it increases or lowers the amount of pages per second you are able to scrape.
+
+> You can remove these options when you continue to the next step.
 
 ## (Step 7) - Improve performance
 The next step is to improve the performance of the scraper. Make it so that the following operations run in their own virtual thread.
 
 ```java
 visited.add(url);
-for (Element link : linksOnPage) {
+    for (Element link : linksOnPage) {
     String nextUrl = link.attr("abs:href");
     if (nextUrl.contains("http")) {
         pageQueue.add(nextUrl);
     }
 }
 ```
-Run the Scraper a few times with and without the improvement to see the differance it makes.
-
-**Note**: Not seeing a lot of differance or lower performance? Those things happen sadly, and depend on lot different factors. 
-One big thing that has a lot of impact on the performance is the Spring boot project you started in the beginning. You can
-make changes to the TestForWorkshopController.java class to make the server behave differently. One big thing that impact this
-part of the code is the number of URls on a page.
+Run the Scraper a few times with and without the improvement to see the differance it makes if any. 
 
 ## (Step 8) - Use StructuredTaskScope
-introduce structured concurrency and improve it by adding the StructuredTaskScope
+> For this and the following steps it is maybe necessary to run your application with the `--enable-preview` flag. 
 
-```java
- try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-                scope.fork(() -> visited.add(url));
-                scope.fork(() -> {
-                            for (Element link : linksOnPage) {
-                                String nextUrl = link.attr("abs:href");
-                                if (nextUrl.contains("http")) {
-                                    pageQueue.add(nextUrl);
-                                }
-                            }
-                            return null;
-                        }
-                );
-            }
-```
+During the last step you started two virtual threads inside another virtual thread. This is a great way to run things concurrently, but its creates an implicit relationship
+between the threads. What should happen when a thread fails? In this case it all or nothing, either all threads succeed or none do. 
 
+During this step we are going to improve the code to make the relationship between the threads more explicit. This help other
+developers to better understand the intent of your code, and you can use a powerful way of managing the lifetime of threads.
+
+For this step rewrite the code from the previous assignment in a way that it uses `StructuredTaskScope.ShutdownOnFailure()` the idea is 
+to fork a new thread using the StructuredTaskScope.
 
 ## (Step 9) - Implement ShutdownOnSuccess
-introduce the ShutdownOnSuccess scope
+`ShutdownOnFailure` is not the only shutdown policy that you get with Java 21. During this step you are going to implement the 
+`ShutdownOnSuccess` shutdown policy. The **ShutdownOnSuccess** states that it will shut down the scope after a threads finishes successful.
 
+For the next step we are going to let another service know what page we just scrolled. To improve the speed of the scraper it doesn't matter
+which instance processes the request first. The fastest instance is the winner as far as the scraper is concerned.
+
+The URLs of the instances is:
+- http://localhost:8080/v1/VisitedService/1
+- http://localhost:8080/v1/VisitedService/2
+- http://localhost:8080/v1/VisitedService/3
+
+The services expect a POST request with a URL as body.
+
+Now it is up to you to implement the ShutdownOnSuccess scope in a way that a new virtual thread is forked for each one of the service instances.
+
+
+If you are using the HttpClient you can use the following code:
 ```java
-try (var scope = new StructuredTaskScope.ShutdownOnSuccess<>()) {
-
-    scope.fork(() -> post("http://localhost:8080/v1/VisitedService/1", url));
-    scope.fork(() -> post("http://localhost:8080/v1/VisitedService/2", url));
-    scope.fork(() -> post("http://localhost:8080/v1/VisitedService/3", url));
-
-    scope.join();
-
-}
-
 private Object post(String serviceUrl, String url) throws IOException, InterruptedException {
     HttpRequest request = HttpRequest.newBuilder().POST(HttpRequest.BodyPublishers.ofString(url)).uri(URI.create(serviceUrl)).build();
     client.send(request, HttpResponse.BodyHandlers.ofString());
@@ -174,21 +181,26 @@ private Object post(String serviceUrl, String url) throws IOException, Interrupt
 }
 ```
 
-## (Step 10) - Use scoped values 
-use scoped values for the url lue
+## (Step 10) - Use scoped values
+The name of this step already gave it away, but for the last step you are going to add scoped values to the scraper.
+You need to change the Scraper in such a way that each scraper instance run within a scope where the URL.
+
+The idea is that the `.take()` from the **queue** 
+
+
 
 ```java
     final static ScopedValue<Supplier<String>> URL = ScopedValue.newInstance();
 
         Scrape.URL.get();
 
-executor.submit(() -> ScopedValue.runWhere(Scrape.URL,
+        executor.submit(() -> ScopedValue.runWhere(Scrape.URL,
         () -> {
-            try {
-                return queue.take();
-            } catch (InterruptedException e) {
-                throw new RuntimeException(e);
-            }
+        try {
+        return queue.take();
+        } catch (InterruptedException e) {
+        throw new RuntimeException(e);
+        }
         },
         new Scrape(queue, visited, client)));
 ```
